--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 * {
+    
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -12,6 +13,7 @@
 .container {
     display: block;
     width: 375px;
+    height: 812px;
 }
 /*MPFST style*/
 #bubble {
@@ -66,7 +68,7 @@ top: 16px;
 font-family: Work Sans;
 font-style: normal;
 font-weight: bold;
-font-size: 18px;
+font-size: 0.9rem;
 line-height: 120%;
 background-color: #222222;
 color: #FFFFFF;
@@ -133,7 +135,7 @@ margin: 0px auto;
 font-family: Work Sans;
 font-style: normal;
 font-weight: bold;
-font-size: 18px;
+font-size: 1rem;
 line-height: 120%;
 
 /* identical to box height, or 22px */
