--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 * {
-    
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -10,61 +9,73 @@
     display: none;
 }
 
-.container {
-    display: block;
-    width: 375px;
-    height: 812px;
+.displayFlex {
+    width: 85vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
+
+
+.container {
+    padding-left: 24px;
+}
+
 /*MPFST style*/
+
 #bubble {
     width: 24px;
     height: 24px;
-    position: absolute;
-    left: 24px;
-    right: 12.5%;
-    top: 304px;
-    bottom: 12.5%;
-    background-image: url('/assetc/bubble.png');
-   background-repeat: no-repeat;
-   background-size: 100%;
+    margin-top: 32vh;
+   
+}
+
+#bubble img {
+    width: 24px;
+    height: 24px;
 }
 
 #h1FST {
-    position: absolute;
     width: 124px;
     height: 86px;
-    left: 24px;
-    top: 332px;
     font-family: Work Sans;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 100;
     background: -webkit-linear-gradient(#8C51A5, #CB5E98);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-#buttonCreatAcc {
-    display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 16px 24px;
-
-position: absolute;
-width: 184px;
-height: 54px;
-left: 24px;
-top: 718px;
-background: #222222;
-border-radius: 30px;
+#h1FST b{
+    width: 124px;
+    height: 86px;
+    font-family: Work Sans;
+    font-style: normal;
+    font-weight: 900;
+    background: -webkit-linear-gradient(#8C51A5, #CB5E98);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
+
+#buttonCreatAcc {
+    margin-top: 32vh;
+    margin-bottom: 2vh;
+    padding: 16px 24px;
+    width: 184px;
+    height: 54px;
+    background: #222222;
+    border-radius: 30px;
+}
+
+
+
 #FSTbutton {
-    position: static;
 width: 136px;
 height: 22px;
-left: 24px;
-top: 16px;
-
 font-family: Work Sans;
 font-style: normal;
 font-weight: bold;
@@ -78,71 +89,50 @@ border: none;
 
 /*MP2SEC style*/
 
+
+
 #HAU {
 
-    position: absolute;
-    width: 327px;
-    height: 86px;
-    left: 24px;
-    top: 80px;
-
+    margin: 9vh 0vw;
     font-family: Work Sans;
     font-style: normal;
     font-weight: bold;
-    font-size: 48px;
+    font-size: 45px;
     line-height: 90%;
     color: #222222;
 }
 
 #WYName {
-    position: absolute;
-left: 24px;
-top: 238px;
-border: none;
-
-font-family: Work Sans;
-font-style: normal;
-font-weight: bold;
-font-size: 48px;
-line-height: 90%;
+    width: 80vw;
+    border: none;
+    font-family: Work Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 90%;
 }
 
 #MP2SECbutton {
-    display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 16px 24px;
-
-position: absolute;
-width: 90px;
-height: 54px;
-left: 24px;
-top: 718px;
-
-/* gray_dark */
-background: #999999;
-border-radius: 30px;
+    margin-top: 42vh;
+    margin-bottom: 2vh;
+    padding: 16px 24px;
+    width: 90px;
+    height: 54px;
+    background: #999999;
+    border-radius: 30px;
 }
 
 #MP2SECbuttonText {
-    position: static;
-width: 42px;
-height: 22px;
-left: 24px;
-top: 16px;
-margin: 0px auto;
-
-font-family: Work Sans;
-font-style: normal;
-font-weight: bold;
-font-size: 1rem;
-line-height: 120%;
-
-/* identical to box height, or 22px */
-
-/* white */
-color: #FFFFFF;
-background-color: #999999;
+    width: 42px;
+    height: 22px;
+    margin: 0px auto;
+    font-family: Work Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1rem;
+    line-height: 120%;
+    color: #FFFFFF;
+    background-color: #999999;
 
 }
 
@@ -156,3 +146,333 @@ font-size: 48px;
 line-height: 90%;
 }
 
+/*FELADAT_02*/
+
+/*iName style*/
+#homeHeader {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90vw;
+    margin-top: 5vh;
+}
+
+#iName {
+    font-size: 1rem;
+    color: #222222;
+}
+
+/*homeHeaderMenu style*/
+
+#homeHeaderMenu {
+    width: 24px;
+    height: 16px;
+    margin-right: 29px;
+    margin-bottom: 13px;
+    background-image: url("/assets/menu.png");
+    background-repeat: no-repeat;
+    background-size: 90%, cover;
+    background-color: transparent;
+}
+
+#startNCH {
+    width: 80vw;
+    margin-bottom: 5vh;
+}
+
+ #startNCH h2 {
+    font-family: Work Sans;
+    font-size: 3.4rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 90%;
+    background: -webkit-linear-gradient(#8C51A5, #CB5E98);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+ }
+
+ #newChat {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 90vw;
+    margin-bottom: 32px;
+}
+.profPic {
+    width: 56px;
+    height: 56px;
+    margin-right: 10px;
+    background-color: #d3cdcd;
+    border: none;
+    border-radius: 50%;
+}
+
+#newChatText {
+    width: 84px;
+    font-family: Work Sans;
+    font-size: 1rem;
+    font-style: normal;
+    color: #999999;
+}
+
+#newChatSer {
+    width: 22px;
+    height: 22px;
+    margin-left: 120px;
+    margin-right: 29px;
+    background-image: url("../assets/search.png");
+    background-repeat: no-repeat;
+    background-size: 90%, cover;
+    background-color: transparent;
+}
+
+#parti {
+    width: 90vw;
+    height: 55vh;
+    padding-top: 5px;
+    margin-bottom: 17px;
+    overflow: scroll;
+}
+
+.displayFlexParti {
+    width: 90vw;
+    height: 14vh;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.profPic {
+    width: 56px;
+    height: 56px;
+    margin-right: 10px;
+    background-color: #d3cdcd;
+    border: none;
+    border-radius: 50%;
+}
+
+.textContainer {
+    width: 60vw;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.userName {
+    font-weight: bold;
+}
+
+.userMessage {
+    width: 125px;
+    height: 25px;
+    margin-top: 5px;
+    font-size: 0.7rem;
+    line-height: 120%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+/*Felugró chat ablak style*/
+
+#displayFlexChat {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.displayFlexPartiChat {
+    height: 14vh;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: flex-start;
+    align-items:center;
+}
+
+#chatSpan {
+    margin-left: 3vw;
+    font-weight: 900;
+    font-size: 1rem;
+}
+.center {
+  transform: translateY(11%);
+}
+
+#backHeader {
+    margin-top: 5vh;
+}
+
+#Today {
+    margin-left: -24px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 90vw;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    color: #999999;
+}
+
+#userMessageBox {
+    padding: 10px;
+    margin-bottom: 3vh;
+    border: 1px solid #999999;
+    border-radius: 16px;
+}
+
+#userMessageBoxText {
+    padding: 1px;
+    font-size: 0.9rem;
+}
+
+#messageTextBox {
+    padding: 2px;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: space-between;
+    align-items:center;
+}
+
+.graybackground {
+    background-color: #E8E8E8;
+    border: 1px solid #E8E8E8;
+    border-radius: 16px;
+    padding: 1vh 2vw;
+}
+
+#actionReaction {
+    margin-top: 1.3vh;
+    margin-bottom: 5vh;
+    padding: 2px;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: space-between;
+    align-items:center;
+}
+
+.emojiChat {
+    font-size: 1.3rem;
+}
+
+.reactText {
+    font-size: 0.6rem;
+    color: #999999;
+}
+
+/*FELADAT_03*/
+
+/*SEARCH PAGE STYLE*/
+
+#displaxFlexSearch {
+    height: 100vh;
+    margin-left: 1vw;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.displayFlexPartiChat {
+    height: 14vh;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: flex-start;
+    align-items:center;
+}
+
+
+#searchBack {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    margin-top: 6vh;
+    margin-bottom: 3vh;
+}
+
+.searchInput {
+    width: 65vw;
+    border: none;
+    font-family: Work Sans;
+    font-size: 3.4rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 90%;
+}
+
+.searchInputone {
+    width: 65vw;
+    border: none;
+    font-family: Work Sans;
+    font-size: 3.4rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 90%;
+    background: -webkit-linear-gradient(#8C51A5, #CB5E98);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+::placeholder {
+    color: #ddd7d7;
+}
+
+#searchContactArray {
+    display: flex;
+    flex-direction: column;
+    margin-top: 3vh;
+    width: 80vw;
+}
+
+#searchContactAlphabetArray {
+    border-top: 1px solid #E8E8E8;
+}
+
+#searchContactArrayRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 2vh 0vw;
+}
+
+
+
+#searchAlphabet {
+    width: 10vw;
+    font-family: Work Sans;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 90%;
+}
+
+#searchAlphabethide {
+    width: 10vw;
+    visibility: hidden;
+}
+
+#profcontainer {
+    display: flex;
+    align-items: center;
+    margin-left: 3vw;
+}
+
+#username {
+    margin-left: 3vw;
+    font-weight: bold;
+}
+
+#usermessageNone {
+    display: none;
+}
